--- a/README
+++ b/README
@@ -1,7 +1,25 @@
+*** DESCRIPTION ***
 Battery indicator for keyboard. At first, I only want make this extention for my Keychron K2,
 but it should work with any keyboard in general as long as you can find it when running upower -d
 
+*** INSTALLATION ***
 To install this extention from git
    1. From your terminal, go to "~/.local/share/gnome-shell/extensions"
    2. Clone the source code from git:
 	git clone https://github.com/cobblestone88/kBoardBattery-brightstone8x.gmail.com.git
+
+*** KNOWN ISSUE ***
+   1. Refresh time is 2 minutes by default (of DBusProxy) cannot change it for now
+   2. Connect keyboard after the extenstion is enable (or after login)
+    -> it will never show the %
+    -> work arownd: disable then enable the extention again then it should work
+   3. Only show battery for 1 keyboard, if you connect more than one then it will show the first keyb found.
+    
+*** TROUBLESHOOTING ***
+This extention retrieve device's info using DBusProxy & GlibUPower, if you ever notice any issue with the extention:
+   1. First, check if UPower can see your device, this extention can only see you device if UPower does
+      method 1: Issue 'upower -d | grep keyboard -A 7' in your terminnal
+      method 2: Run gnome-power-statistics
+   2. Check gnome-shell log:
+      journalctl /usr/bin/gnome-shell | grep k2			 # this commmand will dump all gnome-shell log ever record
+      journalctl -f /usr/bin/gnome-shell | grep k2 -A 10	 # this will only show new log
