--- a/README
+++ b/README
@@ -23,4 +23,4 @@ This extension retrieve device's info using DBusProxy & GlibUPower, if you ever 
       method 2: Run gnome-power-statistics
    2. Check gnome-shell log:
       journalctl /usr/bin/gnome-shell | grep k2			 # this commmand will dump all gnome-shell log ever record
-      journalctl -f /usr/bin/gnome-shell | grep k2 -A 10	 # this will only show new log
+      journalctl -f /usr/bin/gnome-shell | grep k2		 # this will only show new log
