--- a/README
+++ b/README
@@ -10,12 +10,13 @@ To install this extension from git
    3. Restart gnome-shell: Alt + F2, type 'r' then hit Enter
 
 *** KNOWN ISSUE ***
-   1. Refresh time is 2 minutes by default (of DBusProxy) cannot change it for now
+   1. Refresh time is 2 minutes by default (of DBusProxy) not yet figure out how to change it for now. 
    2. Connect keyboard after the extenstion is enable (or after login)
     -> it will never show the %
     -> work arownd: disable then enable the extension again then it should work
    3. Only show battery for 1 keyboard, if you connect more than one then it will show the first keyb found.
-    
+   4. The indicator does not hide when the keyboard is disconnected, but at least it still works when keyboard reconnects
+
 *** TROUBLESHOOTING ***
 This extension retrieve device's info using DBusProxy & GlibUPower, if you ever notice any issue with the extension:
    1. First, check if UPower can see your device, this extension can only see you device if UPower does
