--- a/README
+++ b/README
@@ -11,7 +11,7 @@ To install this extension from git
 
 *** KNOWN ISSUE ***
    1. Refresh time is 2 minutes by default (of DBusProxy) not yet figure out how to change it for now. 
-   2. Connect keyboard after the extenstion is enable (or after login)
+   2. Connect keyboard after the extenstion is enable (or after login) - FIXED IN VER 2
     -> it will never show the %
     -> work arownd: disable then enable the extension again then it should work
    3. Only show battery for 1 keyboard, if you connect more than one then it will show the first keyb found.
