--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-*** DESCRIPTION ***
-===================
+DESCRIPTION
+===========
 
 Battery indicator for keyboard. At first, I only want make this extension for my Keychron K2,
 but it should work with any keyboard in general as long as you can find it when running upower -d
 
-*** INSTALLATION ***
-====================
+INSTALLATION
+============
 
 To install this extension from git
    1. From your terminal, go to "~/.local/share/gnome-shell/extensions"
@@ -13,8 +13,8 @@ To install this extension from git
 	git clone https://github.com/cobblestone88/kBoardBattery-brightstone8x.gmail.com.git
    3. Restart gnome-shell: Alt + F2, type 'r' then hit Enter
 
-*** KNOWN ISSUE ***
-===================
+KNOWN ISSUE
+===========
 
    1. Refresh time is 2 minutes by default (of DBusProxy) not yet figure out how to change it for now. 
    2. Connect keyboard after the extenstion is enable (or after login) - FIXED IN VER 2
@@ -23,8 +23,8 @@ To install this extension from git
    3. Only show battery for 1 keyboard, if you connect more than one then it will show the first keyb found.
    4. The indicator does not hide when the keyboard is disconnected, but at least it still works when keyboard reconnects
 
-*** TROUBLESHOOTING ***
-=======================
+TROUBLESHOOTING
+===============
 
 This extension retrieve device's info using DBusProxy & GlibUPower, if you ever notice any issue with the extension:
    1. First, check if UPower can see your device, this extension can only see you device if UPower does
