--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-DESCRIPTION
-===========
+**DESCRIPTION**
+===============
 
 Battery indicator for keyboard. At first, I only want make this extension for my Keychron K2,
 but it should work with any keyboard in general as long as you can find it when running upower -d
 
-INSTALLATION
-============
+**INSTALLATION**
+================
 
 The easy way: Install from https://extensions.gnome.org/extension/2170/keyboard-battery/
 
@@ -15,8 +15,8 @@ The other way: install from git
 	git clone https://github.com/cobblestone88/kBoardBattery-brightstone8x.gmail.com.git
    3. Restart gnome-shell: Alt + F2, type 'r' then hit Enter
 
-KNOWN ISSUE
-===========
+**KNOWN ISSUE**
+===============
 
    1. Refresh time is 2 minutes by default (of DBusProxy) not yet figure out how to change it for now. 
    2. Connect keyboard after the extenstion is enable (or after login) - FIXED IN VER 2
@@ -36,8 +36,8 @@ This extension retrieve device's info using DBusProxy & GlibUPower, if you ever 
       journalctl /usr/bin/gnome-shell | grep kBatt		# this commmand will dump all gnome-shell log ever record
       journalctl -f /usr/bin/gnome-shell | grep kBatt		# this will only show new log
 
-TIP FOR THOSE WHO'S USING KEYCHRON KEYBOARDS WITH LINUX
-=======================================================
+**TIP FOR THOSE WHO'S USING KEYCHRON KEYBOARDS WITH LINUX**
+===========================================================
 
 Here the best setup (I think so :D) for Keychron + Linux
 	Step 1: Set fkeyfirst by:
